--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
     <script src="https://unpkg.com/aframe-area-light-component/dist/aframe-area-light-component.min.js"></script> 
+    <script src="correspondanceMap.js"></script> 
+    <script src="perlin.js"></script> 
     <script src="colors.js"></script> 
     <script src="three/CustomMeshFlat.js"></script> 
     <script src="three/GeometryHelpers.js"></script> 
@@ -19,7 +21,7 @@
     <script type="text/javascript" src="tree.js"></script>
   </head>
   <body>
-  <a-scene>
+  <a-scene antialias="true">
     <a-assets>
       <a-asset-item id="tree1" src="models/tree1/scene.gltf"></a-asset-item>
       <a-asset-item id="tree2" src="models/tree2/scene.gltf"></a-asset-item>
@@ -36,6 +38,33 @@
       <a-asset-item id="basicSword" src="models/basic-sword/scene.gltf"></a-asset-item>
     </a-assets>
 
+    <a-sky color="#6EBAA7"></a-sky>
+
+    <a-entity light="type: directional;
+      color: 0xffffff;
+      intensity: 0.9;
+      castShadow: true;
+      shadowCameraFar: 1000;
+      shadowCameraFov: 180;
+      shadowCameraBottom: -400;
+      shadowCameraLeft: -400;
+      shadowCameraTop: 400;
+      shadowCameraRight: 400" 
+      position="150 350 350" 
+      shadow="cast: true; receive: true"></a-entity>
+      <a-entity light="type: directional;
+        color: 0xe9be55;
+        intensity: 0.9;
+        castShadow: true;
+        shadowCameraFar: 1000;
+        shadowCameraFov: 180;
+        shadowCameraBottom: -400;
+        shadowCameraLeft: -400;
+        shadowCameraTop: 400;
+        shadowCameraRight: 400" 
+        position="-150 350 350" 
+        shadow="cast: true; receive: true"></a-entity>
+
     <a-entity joycon-controls
       position="0 1.5 0"
       rotation="0 0 0"
@@ -51,21 +80,16 @@
 
     <script type="text/javascript" src="player.js"></script>
 
-    <a-tree position="0 0 0" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="-3 0 0" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="3 0 0" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="0 0 -3" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="0 0 3" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="-3 0 3" scale="0.1 0.1 0.1"></a-tree>
-    <a-tree position="3 0 -3" scale="0.1 0.1 0.1"></a-tree>
-    <a-entity environment="
+    <a-mountain rotation="-90 0 0" scale="3 3 0.5" position="0 5 0" shadow="cast: true; receive: true"></a-mountain>
+
+    <!--<a-entity environment="
       preset: forest;
       dressing: none;
       skyType: atmosphere;
       groundTexture: none;
       shadow: true;
       ground: none;
-      fog: 0"></a-entity>
+      fog: 0"></a-entity>-->
 </a-entity>
   </a-scene>
   </body>
